# D-Tools-Cloud-MCP-Server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  config.py  main.py  pyproject.toml  zensical.toml
docs/: claude-desktop-mcp-setup.md  features.md  index.md
docs/Development-Docs/: architecture.md  development.md  testing.md
docs/Guides/: Usage-Guide.md  claude-desktop-mcp-setup.md
src/dtools_mcp/: api.py  config.py  logger.py  query_builder.py  server.py
src/dtools_mcp/api_endpoints/: __init__.py  change_orders.py  clients.py  files.py  opportunities.py  products.py  projects.py  purchase_orders.py  quotes.py  service_contracts.py  shared.py  time_entries.py
src/dtools_mcp/tools/: __init__.py  change_orders_tools.py  clients_tools.py  files_tools.py  opportunities_tools.py  products_tools.py  projects_tools.py  purchase_orders_tools.py  quotes_tools.py  service_contracts_tools.py  shared.py  time_entries_tools.py
tests/: test_mcp_server.py
