[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d-tools-cloud-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for D-Tools Cloud API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "James Young"}]
dependencies = [
    "anthropic>=0.96.0",
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "inline-snapshot>=0.32.6",
    "mcp[cli]>=1.27.0",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "zensical>=0.0.33",
]

[project.scripts]
d-tools-mcp = "dtools_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dtools_mcp"]
